@@ -20,15 +20,15 @@ if(Yii::app()->getModule('user')->debug===true) {
 
 echo '<table style="width:300px;">';
 $f = '<tr><td>%s</td><td>%s</td></tr>';
-printf($f, Yum::t('Active Users'), $active_users);
-printf($f, Yum::t('Inactive Users (awaiting Activation)'), $inactive_users);
-printf($f, Yum::t('Banned Users'), $banned_users);
-printf($f, Yum::t('Admin Users'), $admin_users);
+printf($f, Yum::t('Active users'), $active_users);
+printf($f, Yum::t('Inactive users'), $inactive_users);
+printf($f, Yum::t('Banned users'), $banned_users);
+printf($f, Yum::t('Admin users'), $admin_users);
 printf($f, Yum::t('Roles'), $roles); 
 printf($f, Yum::t('Profiles'), $profiles);
 printf($f, Yum::t('Profile fields'), $profile_fields);
 printf($f, Yum::t('Profile field groups'), $profile_field_groups);
 printf($f, Yum::t('Messages'), $messages); 
-printf($f, Yum::t('Different logged in users today'), $logins_today); 
+printf($f, Yum::t('Different users logged in today'), $logins_today); 
 echo '</table>';
 ?>
